[package]
name = "better_kt_sqep"
version = "0.3.0"
edition = "2024"
authors = ["zmsbruce <zmsbruce@163.com>", "happyme531 <happyme5315@gmail.com>"]
description = "A better knowledge graph editing software replacing KT-SQEP."
license = "GPL-3.0"

[[bin]]
name = "better_kt_sqep"
path = "src/main.rs"

[lib]
name = "py_better_kt_sqep"
crate-type = ["cdylib"]

[dependencies]
eframe = { version = "0.31.1", features = [ "wgpu" ] }
egui_extras = { version = "0.31.1", features = ["all_loaders"] }
im = "15.1.0"
image = { version = "0.25.5", features = ["png"] }
quick-xml = { version = "0.37.2", features = ["serde", "serialize"] }
rfd = "0.15.3"
serde = { version = "1.0.219", features = ["derive"] }
svg = "0.18.0"
thiserror = "2.0.12"
pyo3 = { version = "0.24.0", optional = true }

[features]
default = []
extension-module = ["pyo3/extension-module", "pyo3/abi3-py38"]

[dev-dependencies]
regex = "1.11.1"
